--- a/CIT 261/Styles/lesson5.css
+++ b/CIT 261/Styles/lesson5.css
@@ -1,8 +1,13 @@
 
 main {
-    background-color: lightgrey;
-
+    margin: 1.25rem auto;
+    padding: 1rem;
+    max-width: 1000px;
 }
+body {
+    margin: 0;
+  }
+  
 
 
 body {
@@ -11,6 +16,41 @@ body {
     font-family: Trebuchet MS, sans-serif;
     color: black;
 }
+   .navigation {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: gray;
+  }
+  
+  .navigation li {
+    float: left;
+  }
+  
+  .navigation li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .navigation li a:hover:not(.active) {
+    background-color: darkslategray;
+  }
+  
+  .navigation .active {
+    background-color: #333;
+  }
+
+   .weeks {
+    text-align: left;
+    background-color: lightyellow;
+    color: black;
+}
+
+
 
 
 
@@ -20,23 +60,23 @@ main,
 nav {
     margin: 1rem auto;
     padding: .70rem 1.8rem .8rem;
-    max-width: 900px;
+    max-width: 950px;
     
 }
+
+
+
+
 
 header,
 footer,
 footer a {
     text-align: center;
-    background-color: blue;
+    background-color:lightseagreen;
     color: whitesmoke;
 }
 
-nav {
-    text-align: left;
-    background-color: lightyellow;
-    color: black;
-}
+
 
 
 footer {
