--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -86,6 +86,18 @@ table {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+.rcorners3 {
+  border-radius: 25px;
+  background: pink;
+  background-position: left top;
+  background-repeat: repeat;
+  padding: 20px; 
+  width: 400px;
+  height: 450px;  
+  
+}
+
+
 
 
 
