--- a/Styles/galeryStyle.css
+++ b/Styles/galeryStyle.css
@@ -1,3 +1,19 @@
+
+
+  body{
+    max-width: 1025px;
+    margin: auto;
+    font-size: 16px;
+    line-height: 30px;
+    font-family: Trebuchet MS, sans-serif;
+    color: black;
+}
+main {
+    margin: 1.25rem auto;
+    padding: 1rem;
+    max-width: 1000px;
+}
+
 div.gallery {
     margin: 5px;
     border: 1px solid #ccc;
@@ -11,11 +27,81 @@ div.gallery {
   
   div.gallery img {
     width: 100%;
-    height: auto;
+    height: 100%;
   }
   
   div.desc {
     padding: 15px;
     text-align: center;
   }
+
+
+  body {
+    font-size: 16px;
+    line-height: 30px;
+    font-family: Trebuchet MS, sans-serif;
+    color: black;
+}
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: gray;
+  }
+  
+  .navigation li {
+    float: left;
+  }
+  
+  .navigation li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .navigation li a:hover:not(.active) {
+    background-color: darkslategray;
+  }
+  
+  .active {
+    background-color: #333;
+  }
+
+
+
+
+header,
+
+main,
+nav {
+    margin: 1rem auto;
+    padding: .70rem 1.8rem .8rem;
+    max-width: 950px;
+    
+}
+
+
+
+
+
+
+
+header{
+    text-align: center;
+    background-color:lightseagreen;
+    color: whitesmoke;
+}
+
+
+  
+
+
+
+
+
+
+
   
