--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -42,7 +42,13 @@ nav {
 }
 
 
-
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: gray;
+}
 
 
 header,
