--- a/CIT 261/Styles/finalProject.css
+++ b/CIT 261/Styles/finalProject.css
@@ -26,7 +26,10 @@ body {
     background-color: #333;
   }
 
-
+  @media screen and (max-width: 600px) {
+    ul.navigation li.right, 
+    ul.navigation li {float: none;}
+  }
 
 
 header,
