--- a/CIT 261/Styles/lesson5.css
+++ b/CIT 261/Styles/lesson5.css
@@ -8,7 +8,10 @@ body {
     margin: 0;
   }
   
-
+  @media screen and (max-width: 600px) {
+    ul.navigation li.right, 
+    ul.navigation li {float: none;}
+  }
 
 body {
     font-size: 16px;
@@ -82,5 +85,7 @@ footer a {
 footer {
     font-size: 0.75rem;
 }
+
+
 
 
